<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.infusequest</groupId>
    <artifactId>InfuseQuest</artifactId>
    <version>1.0</version>

    <properties>

        <java.version>21</java.version>

    </properties>


    <repositories>

        <repository>
            <id>papermc</id>
            <url>
            https://repo.papermc.io/repository/maven-public/
            </url>
        </repository>


    </repositories>


    <dependencies>


        <dependency>

            <groupId>io.papermc.paper</groupId>

            <artifactId>paper-api</artifactId>

            <version>1.21.11-R0.1-SNAPSHOT</version>

            <scope>provided</scope>

        </dependency>


        <!-- SQLite -->

        <dependency>

            <groupId>org.xerial</groupId>

            <artifactId>sqlite-jdbc</artifactId>

            <version>3.46.1.0</version>

        </dependency>


    </dependencies>


    <build>

        <plugins>

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-compiler-plugin</artifactId>

                <version>3.13.0</version>

                <configuration>

                    <source>21</source>

                    <target>21</target>

                </configuration>

            </plugin>


        </plugins>


    </build>


</project>